tests/fixtures/invalid/pow_dict_str.py
# Cannot call pow() with Dict[str, int], Str
x = pow({"a": 1}, "hello")
